--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>Hannah Massey</h1>
 </p>Hannah Massey is a third year Media Arts and Design student at UCSB. Her interests include visual storytelling, graphic design, and UX/UI interrfaces. Hannah's work serves as a bridge between the analog and the digital; creating a complex dialetic. She is interested in creating a feeling of tangibility within digital spaces.</p>
+<img src="insect.png" style="zoom:50%;" />
 </body>
 </html>
