--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <body>
 <h1>Hannah Massey</h1>
-</p>Hannah Massey is a third year Media Arts and Design student at UCSB. Her interests include visual storytelling, graphic design, and UX/UI interrfaces. Hannah's work serves as a bridge between the analog and the digital; creating a complex dialetic. She is interested in creating a feeling of tangibility within digital spaces. Connect with Hannah on [Instagram](https://www.instagram.com/hannahmasssey/?hl=en) and [Linkedin] (https://www.linkedin.com/in/hannah-massey-59317729a/) </p>
+</p>Hannah Massey is a third year Media Arts and Design student at UCSB. Her interests include visual storytelling, graphic design, and UX/UI interrfaces. Hannah's work serves as a bridge between the analog and the digital; creating a complex dialetic. She is interested in creating a feeling of tangibility within digital spaces. </p>
+
+<a href="https://www.linkedin.com/in/hannah-massey-59317729a/">Linkedin</a>
+<a href="https://www.instagram.com/hannahmasssey/?hl=en">Instagram</a>
 <img src="insect.png" style="zoom:50%;" />
 </body>
 </html>
