--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <body>
 <h1>Hannah Massey</h1>
-</p>Hannah Massey is a third year Media Arts and Design student at UCSB. Her interests include visual storytelling, graphic design, and UX/UI interrfaces. Hannah's work serves as a bridge between the analog and the digital; creating a complex dialetic. She is interested in creating a feeling of tangibility within digital spaces. <a href="https://www.linkedin.com/in/hannah-massey-59317729a/">Linkedin</a>
+</p>Hannah Massey is a third year Media Arts and Design student at UCSB. Her interests include visual storytelling, graphic design, and UX/UI interrfaces. Hannah's work serves as a bridge between the analog and the digital; creating a complex dialetic. She is interested in creating a feeling of tangibility within digital spaces. Connect with Hannah on <a href="https://www.linkedin.com/in/hannah-massey-59317729a/">Linkedin</a> and
 <a href="https://www.instagram.com/hannahmasssey/?hl=en">Instagram</a> </p>
 
 
