--- a/gallery/index.html
+++ b/gallery/index.html
@@ -8,7 +8,7 @@
 
     <h1>Title of Project 1</h1>
     <h4>by Your Name</h4>
-    <img src="project1.jpg" width="500" />
+    <img src="image1.png" width="500" />
     <p>This is my abstract</p>
 
     <br/>
@@ -17,7 +17,7 @@
 
     <h1>Title of Project 2</h1>
     <h4>by Your Name</h4>
-    <img src="project2.jpg" width="500" />
+    <img src="image2.png" width="500" />
     <p>This is my abstract</p>
 
     <br/>
@@ -26,7 +26,7 @@
 
     <h1>Title of Project 3</h1>
     <h4>by Your Name</h4>
-    <img src="project3.jpg" width="500" />
+    <img src="hannahmassey009.jpeg" width="500" />
     <p>This is my abstract</p>
 
   </body>
