--- a/gallery/index.html
+++ b/gallery/index.html
@@ -26,7 +26,7 @@
 
     <h1>Title of Project 3</h1>
     <h4>by Your Name</h4>
-    <img src="hannahmassey009.jpeg" width="500" />
+    <img src="hannahmassey009.png" width="500" />
     <p>This is my abstract</p>
 
   </body>
