--- a/gallery/index.html
+++ b/gallery/index.html
@@ -6,28 +6,28 @@
   </head>
   <body>
 
-    <h1>Title of Project 1</h1>
-    <h4>by Your Name</h4>
+    <h1>Boid System</h1>
+    <h4>by Hannah Massey, 2024</h4>
     <img src="image1.png" width="500" />
-    <p>This is my abstract</p>
+    <p>This is a piece I created for MAT 110CF. It was inspired by flocks of starlings and the single movement they create together as a flock. I used blender to realize this design by annimating an organic shape to follow a boid system. The organic shape that served as the "starling" was inspired by fashion designer Iris Van Herpen. Van Herpen's pieces create intense and organic forms of movement and fluidity that I wasnted to capture in my own work. In the future, I would love to expolore blenders textures and rendering capabilities to create a more completed work. </p>
 
     <br/>
     <br/>
     <hr/>
 
-    <h1>Title of Project 2</h1>
-    <h4>by Your Name</h4>
+    <h1>An Eternal Day in Isla Vista</h1>
+    <h4>by Hannah Massey and Liliana Anguiano, 2024</h4>
     <img src="image2.png" width="500" />
-    <p>This is my abstract</p>
+    <p>This work I created in collaboration for WORD Magazine, Isla Vista's Arts and Culture Magazine. I designed this spread in collaboration with the writer of the piece. I wanted to create a layout that was minimalistic and tranquil, matching the vibe of the retirment home, which was the subject of the article. I had to follow a specific style guide, which limited my creativity, as to help create a cohesive magazine. </p>
 
     <br/>
     <br/>
     <hr/>
 
-    <h1>Title of Project 3</h1>
-    <h4>by Your Name</h4>
+    <h1>King of the World</h1>
+    <h4>by Hannah Massey, 2024</h4>
     <img src="hannahmassey009.png" width="500" />
-    <p>This is my abstract</p>
+    <p>This is a photograph I took on top of Twin Peaks in San Francisco. I enjoyed the composition of both the dog reachiing for the skyline, and the uninterested bystander, taking a photo. I think it is a really engaging composition that portays the playful vibe that I got when I took the photograph. </p>
 
   </body>
 </html>
